--- a/ByBit.Net/Bybit.Net.csproj
+++ b/ByBit.Net/Bybit.Net.csproj
@@ -43,6 +43,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Bybit.Net.xml" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Icon\icon.png" Pack="true" PackagePath="\" />
     <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
